// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should call onUpdate when select all clicked 1`] = `
<div>
  <div
    class="multi-select  mko_gty3bt-multiSelect"
  >
    <div
      class="multi-select__display has-float-label select-container  mko_gty3bt-multiSelect__display  mko_1aosyyv-controlContainer"
    >
      <input
        autocomplete="off"
        class="multi-select__input"
        id="mko"
        placeholder="Select a jester"
        readonly=""
        tabindex="0"
        type="text"
        value=""
      />
      <label
        for="mko"
      >
        MultiSelect
      </label>
    </div>
    <div
      aria-hidden="false"
      class="multi-select__dropdown-container multi-select__dropdown-container--is-open  mko_gty3bt-multiSelect__dropdown  mko_gty3bt-multiSelect__dropdown_open"
    >
      <ul
        class="multi-select__list  mko_gty3bt-multiSelect__list"
      >
        <input
          class="tab-trap tab-trap--top  mko_1q23t0y-tabTrap"
          type="text"
        />
        <li>
          <div
            class="tickbox  mko_1oj1nfd-tickbox"
          >
            <label
              class="tickbox__label  mko_1oj1nfd-tickbox__label"
              for="mko--selectAll"
            >
              <input
                class=" mko_1oj1nfd-tickbox__input"
                id="mko--selectAll"
                name="mko--selectAll"
                type="checkbox"
              />
              Select All
            </label>
          </div>
        </li>
        <li
          class="multi-select__separator  mko_gty3bt-separator"
        />
        <li>
          <div
            class="tickbox  mko_1oj1nfd-tickbox"
          >
            <label
              class="tickbox__label  mko_1oj1nfd-tickbox__label"
              for="mko--option-0"
            >
              <input
                class=" mko_1oj1nfd-tickbox__input"
                id="mko--option-0"
                name="mko--option-0"
                type="checkbox"
              />
              Gen1
            </label>
          </div>
        </li>
        <li>
          <div
            class="tickbox  mko_1oj1nfd-tickbox"
          >
            <label
              class="tickbox__label  mko_1oj1nfd-tickbox__label"
              for="mko--option-1"
            >
              <input
                class=" mko_1oj1nfd-tickbox__input"
                id="mko--option-1"
                name="mko--option-1"
                type="checkbox"
              />
              Gen2
            </label>
          </div>
        </li>
        <li>
          <div
            class="tickbox  mko_1oj1nfd-tickbox"
          >
            <label
              class="tickbox__label  mko_1oj1nfd-tickbox__label"
              for="mko--option-2"
            >
              <input
                class=" mko_1oj1nfd-tickbox__input"
                id="mko--option-2"
                name="mko--option-2"
                type="checkbox"
              />
              Gen3
            </label>
          </div>
        </li>
        <li>
          <div
            class="tickbox  mko_1oj1nfd-tickbox"
          >
            <label
              class="tickbox__label  mko_1oj1nfd-tickbox__label"
              for="mko--option-3"
            >
              <input
                class=" mko_1oj1nfd-tickbox__input"
                id="mko--option-3"
                name="mko--option-3"
                type="checkbox"
              />
              Gen4
            </label>
          </div>
        </li>
        <input
          class="tab-trap tab-trap--bottom  mko_1q23t0y-tabTrap"
          type="text"
        />
      </ul>
    </div>
  </div>
</div>
`;

exports[`should call onUpdate when tickboxes are changed 1`] = `
<div
  className="multi-select  mko_gty3bt-multiSelect"
>
  <div
    className="multi-select__display has-float-label select-container  mko_gty3bt-multiSelect__display  mko_1aosyyv-controlContainer"
  >
    <input
      autoComplete="off"
      className="multi-select__input"
      id="mko"
      onClick={[Function]}
      onKeyDown={[Function]}
      placeholder="Select a jester"
      readOnly={true}
      tabIndex={0}
      type="text"
      value="Gen1"
    />
    <label
      htmlFor="mko"
    >
      MultiSelect
    </label>
  </div>
  <div
    aria-hidden={false}
    className="multi-select__dropdown-container multi-select__dropdown-container--is-open  mko_gty3bt-multiSelect__dropdown  mko_gty3bt-multiSelect__dropdown_open"
  >
    <ForwardRef(TabTrap)
      className="multi-select__list  mko_gty3bt-multiSelect__list"
      element="ul"
      firstId="mko--selectAll"
      isActive={true}
      lastId="mko--option-3"
      onDeactivate={[Function]}
    >
      <li
        key="ALL"
      >
        <Tickbox
          checked={false}
          id="mko--selectAll"
          name="mko--selectAll"
          onChange={[Function]}
          text="Select All"
        />
      </li>
      <li
        className="multi-select__separator  mko_gty3bt-separator"
        key="SEPARATOR"
      />
      <li
        key="1"
      >
        <Tickbox
          checked={true}
          id="mko--option-0"
          name="mko--option-0"
          onChange={[Function]}
          text="Gen1"
        />
      </li>
      <li
        key="2"
      >
        <Tickbox
          checked={false}
          id="mko--option-1"
          name="mko--option-1"
          onChange={[Function]}
          text="Gen2"
        />
      </li>
      <li
        key="3"
      >
        <Tickbox
          checked={false}
          id="mko--option-2"
          name="mko--option-2"
          onChange={[Function]}
          text="Gen3"
        />
      </li>
      <li
        key="4"
      >
        <Tickbox
          checked={false}
          id="mko--option-3"
          name="mko--option-3"
          onChange={[Function]}
          text="Gen4"
        />
      </li>
    </ForwardRef(TabTrap)>
  </div>
</div>
`;

exports[`should open dropdown on input click 1`] = `
<div
  className="multi-select  mko_gty3bt-multiSelect"
>
  <div
    className="multi-select__display has-float-label select-container  mko_gty3bt-multiSelect__display  mko_1aosyyv-controlContainer"
  >
    <input
      autoComplete="off"
      className="multi-select__input"
      id="mko"
      onClick={[Function]}
      onKeyDown={[Function]}
      placeholder="Select a jester"
      readOnly={true}
      tabIndex={0}
      type="text"
      value=""
    />
    <label
      htmlFor="mko"
    >
      MultiSelect
    </label>
  </div>
  <div
    aria-hidden={false}
    className="multi-select__dropdown-container multi-select__dropdown-container--is-open  mko_gty3bt-multiSelect__dropdown  mko_gty3bt-multiSelect__dropdown_open"
  >
    <ForwardRef(TabTrap)
      className="multi-select__list  mko_gty3bt-multiSelect__list"
      element="ul"
      firstId="mko--selectAll"
      isActive={true}
      lastId="mko--option-3"
      onDeactivate={[Function]}
    >
      <li
        key="ALL"
      >
        <Tickbox
          checked={false}
          id="mko--selectAll"
          name="mko--selectAll"
          onChange={[Function]}
          text="Select All"
        />
      </li>
      <li
        className="multi-select__separator  mko_gty3bt-separator"
        key="SEPARATOR"
      />
      <li
        key="1"
      >
        <Tickbox
          checked={false}
          id="mko--option-0"
          name="mko--option-0"
          onChange={[Function]}
          text="Gen1"
        />
      </li>
      <li
        key="2"
      >
        <Tickbox
          checked={false}
          id="mko--option-1"
          name="mko--option-1"
          onChange={[Function]}
          text="Gen2"
        />
      </li>
      <li
        key="3"
      >
        <Tickbox
          checked={false}
          id="mko--option-2"
          name="mko--option-2"
          onChange={[Function]}
          text="Gen3"
        />
      </li>
      <li
        key="4"
      >
        <Tickbox
          checked={false}
          id="mko--option-3"
          name="mko--option-3"
          onChange={[Function]}
          text="Gen4"
        />
      </li>
    </ForwardRef(TabTrap)>
  </div>
</div>
`;

exports[`should render correct number of options 1`] = `
<div>
  <div
    class="multi-select  mko_gty3bt-multiSelect"
  >
    <div
      class="multi-select__display has-float-label select-container  mko_gty3bt-multiSelect__display  mko_1aosyyv-controlContainer"
    >
      <input
        autocomplete="off"
        class="multi-select__input"
        id="mko"
        placeholder="Select a jester"
        readonly=""
        tabindex="0"
        type="text"
        value=""
      />
      <label
        for="mko"
      >
        MultiSelect
      </label>
    </div>
    <div
      aria-hidden="false"
      class="multi-select__dropdown-container multi-select__dropdown-container--is-open  mko_gty3bt-multiSelect__dropdown  mko_gty3bt-multiSelect__dropdown_open"
    >
      <ul
        class="multi-select__list  mko_gty3bt-multiSelect__list"
      >
        <input
          class="tab-trap tab-trap--top  mko_1q23t0y-tabTrap"
          type="text"
        />
        <li>
          <div
            class="tickbox  mko_1oj1nfd-tickbox"
          >
            <label
              class="tickbox__label  mko_1oj1nfd-tickbox__label"
              for="mko--selectAll"
            >
              <input
                class=" mko_1oj1nfd-tickbox__input"
                id="mko--selectAll"
                name="mko--selectAll"
                type="checkbox"
              />
              Select All
            </label>
          </div>
        </li>
        <li
          class="multi-select__separator  mko_gty3bt-separator"
        />
        <li>
          <div
            class="tickbox  mko_1oj1nfd-tickbox"
          >
            <label
              class="tickbox__label  mko_1oj1nfd-tickbox__label"
              for="mko--option-0"
            >
              <input
                class=" mko_1oj1nfd-tickbox__input"
                id="mko--option-0"
                name="mko--option-0"
                type="checkbox"
              />
              Gen1
            </label>
          </div>
        </li>
        <li>
          <div
            class="tickbox  mko_1oj1nfd-tickbox"
          >
            <label
              class="tickbox__label  mko_1oj1nfd-tickbox__label"
              for="mko--option-1"
            >
              <input
                class=" mko_1oj1nfd-tickbox__input"
                id="mko--option-1"
                name="mko--option-1"
                type="checkbox"
              />
              Gen2
            </label>
          </div>
        </li>
        <li>
          <div
            class="tickbox  mko_1oj1nfd-tickbox"
          >
            <label
              class="tickbox__label  mko_1oj1nfd-tickbox__label"
              for="mko--option-2"
            >
              <input
                class=" mko_1oj1nfd-tickbox__input"
                id="mko--option-2"
                name="mko--option-2"
                type="checkbox"
              />
              Gen3
            </label>
          </div>
        </li>
        <li>
          <div
            class="tickbox  mko_1oj1nfd-tickbox"
          >
            <label
              class="tickbox__label  mko_1oj1nfd-tickbox__label"
              for="mko--option-3"
            >
              <input
                class=" mko_1oj1nfd-tickbox__input"
                id="mko--option-3"
                name="mko--option-3"
                type="checkbox"
              />
              Gen4
            </label>
          </div>
        </li>
        <input
          class="tab-trap tab-trap--bottom  mko_1q23t0y-tabTrap"
          type="text"
        />
      </ul>
    </div>
  </div>
</div>
`;

exports[`should render with minimum props 1`] = `
<div>
  <div
    class="multi-select  mko_gty3bt-multiSelect"
  >
    <div
      class="multi-select__display has-float-label select-container  mko_gty3bt-multiSelect__display  mko_1aosyyv-controlContainer"
    >
      <input
        autocomplete="off"
        class="multi-select__input"
        id="mko"
        placeholder="Select a jester"
        readonly=""
        tabindex="0"
        type="text"
        value=""
      />
      <label
        for="mko"
      >
        MultiSelect
      </label>
    </div>
    <div
      aria-hidden="true"
      class="multi-select__dropdown-container  mko_gty3bt-multiSelect__dropdown"
    >
      <ul
        class="multi-select__list  mko_gty3bt-multiSelect__list"
      >
        <li>
          <div
            class="tickbox  mko_1oj1nfd-tickbox"
          >
            <label
              class="tickbox__label  mko_1oj1nfd-tickbox__label"
              for="mko--selectAll"
            >
              <input
                class=" mko_1oj1nfd-tickbox__input"
                id="mko--selectAll"
                name="mko--selectAll"
                type="checkbox"
              />
              Select All
            </label>
          </div>
        </li>
        <li
          class="multi-select__separator  mko_gty3bt-separator"
        />
        <li>
          <div
            class="tickbox  mko_1oj1nfd-tickbox"
          >
            <label
              class="tickbox__label  mko_1oj1nfd-tickbox__label"
              for="mko--option-0"
            >
              <input
                class=" mko_1oj1nfd-tickbox__input"
                id="mko--option-0"
                name="mko--option-0"
                type="checkbox"
              />
              Gen1
            </label>
          </div>
        </li>
        <li>
          <div
            class="tickbox  mko_1oj1nfd-tickbox"
          >
            <label
              class="tickbox__label  mko_1oj1nfd-tickbox__label"
              for="mko--option-1"
            >
              <input
                class=" mko_1oj1nfd-tickbox__input"
                id="mko--option-1"
                name="mko--option-1"
                type="checkbox"
              />
              Gen2
            </label>
          </div>
        </li>
        <li>
          <div
            class="tickbox  mko_1oj1nfd-tickbox"
          >
            <label
              class="tickbox__label  mko_1oj1nfd-tickbox__label"
              for="mko--option-2"
            >
              <input
                class=" mko_1oj1nfd-tickbox__input"
                id="mko--option-2"
                name="mko--option-2"
                type="checkbox"
              />
              Gen3
            </label>
          </div>
        </li>
        <li>
          <div
            class="tickbox  mko_1oj1nfd-tickbox"
          >
            <label
              class="tickbox__label  mko_1oj1nfd-tickbox__label"
              for="mko--option-3"
            >
              <input
                class=" mko_1oj1nfd-tickbox__input"
                id="mko--option-3"
                name="mko--option-3"
                type="checkbox"
              />
              Gen4
            </label>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
